# risk-terminal

./: .gitignore  README.md  api.py  home.py  pyproject.toml
contracts/chains/binance-smart-chain/: bep20_pools.json
data/: protocols.json  quants.csv  quants.json
models/: data.py
modules/: classifier.py  fireblocks.py  goplus.py  lp.py  trader.py  web3data.py  whales.py
notebooks/: classifier.ipynb  transactions.ipynb
output/: addresses.txt  addresses2.txt  avg_trade_size.txt  balances.txt  balances2.txt  classifications.txt  hash_tx_from.txt  num_trades.txt  total_size.txt  transfers.txt
