[tool.poetry]
name = "risk-terminal"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Private"
readme = "README.md"
packages = [{include = "risk_terminal"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
pandas = "^1.5.3"
streamlit = "^1.19.0"
plotly = "^5.13.1"
numpy = "^1.24.2"
ccxt = "^2.8.84"
web3 = "^5.31.3"
websocket-client = "^1.5.1"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
